[package]
name = "geo_ops"
version = "0.1.0"
authors = ["Joe Sadusk <joe@sadusk.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geo = "0.14.0"
quickersort = "3.0"
geo-svg = { git = "ssh://git@github.com/jsadusk/geo-svg" }